--- a/ChatHouse/app/src/main/AndroidManifest.xml
+++ b/ChatHouse/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.chathouse">
+    package="com.example.chathouse"
+    android:requestLegacyExternalStorage="true" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -12,10 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatHouse"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Pages.EditProfile"></activity>
+        <activity android:name=".Pages.FollowingFollowersPage"></activity>
+        <activity android:name=".Pages.EditProfile" />
         <activity android:name=".Pages.ProfilePage" />
         <activity android:name=".Pages.SignUp" />
         <activity android:name=".Pages.Login" />
+
         <activity android:name=".Pages.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
