--- a/ChatHouse/app/src/main/AndroidManifest.xml
+++ b/ChatHouse/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatHouse"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Pages.EditProfile"></activity>
+        <activity android:name=".Pages.Search"></activity>
+        <activity android:name=".Pages.EditProfile" />
         <activity android:name=".Pages.ProfilePage" />
         <activity android:name=".Pages.SignUp" />
         <activity android:name=".Pages.Login" />
