--- a/ChatHouse/build.gradle
+++ b/ChatHouse/build.gradle
@@ -1,8 +1,11 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    defaultMinSdkVersion = 23
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
