--- a/ChatHouse/app/src/main/AndroidManifest.xml
+++ b/ChatHouse/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.chathouse"
-    android:requestLegacyExternalStorage="true" >
+    android:requestLegacyExternalStorage="true">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,14 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatHouse"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Pages.FollowingFollowersPage"></activity>
+        <activity
+            android:name=".Pages.menu"
+            android:label="@string/title_activity_menu"></activity>
+        <activity android:name=".Pages.SearchL2" />
+        <activity android:name=".Pages.FollowingFollowersPage" />
         <activity android:name=".Pages.EditProfile" />
-        <activity android:name=".Pages.Search"></activity>
+        <activity android:name=".Pages.Search" />
         <activity android:name=".Pages.EditProfile" />
         <activity android:name=".Pages.ProfilePage" />
         <activity android:name=".Pages.SignUp" />
         <activity android:name=".Pages.Login" />
-
         <activity android:name=".Pages.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
