menu for activity page

--- a/ChatHouse/app/src/main/AndroidManifest.xml
+++ b/ChatHouse/app/src/main/AndroidManifest.xml
@@ -17,8 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatHouse"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SettingPage"></activity>
-        <activity android:name=".Pages.HomePage"></activity>
+        <activity android:name=".AcitivityPage"></activity>
+        <activity android:name=".RoomInfo" />
+        <activity android:name=".Room" />
+        <activity android:name=".SettingPage" />
+        <activity android:name=".Pages.HomePage" />
         <activity android:name=".Pages.FollowingFollowersPage" />
         <activity android:name=".Pages.EditProfile" />
         <activity android:name=".Pages.Search" />
