--- a/ChatHouse/app/src/main/AndroidManifest.xml
+++ b/ChatHouse/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatHouse"
         android:usesCleartextTraffic="true">
-        <activity android:name=".AcitivityPage"></activity>
-        <activity android:name=".RoomInfo" />
-        <activity android:name=".Room" />
-        <activity android:name=".SettingPage" />
+        <activity android:name=".Pages.AcitivityPage"></activity>
+        <activity android:name=".Pages.RoomInfo" />
+        <activity android:name=".Pages.Room" />
+        <activity android:name=".Pages.SettingPage" />
         <activity android:name=".Pages.HomePage" />
         <activity android:name=".Pages.FollowingFollowersPage" />
         <activity android:name=".Pages.EditProfile" />
