--- a/ChatHouse/app/build.gradle
+++ b/ChatHouse/app/build.gradle
@@ -37,11 +37,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-//    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-//    implementation 'androidx.navigation:navigation-ui:2.2.2'
-//    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    compile 'com.llollox:androidtoggleswitch:2.0.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
