unit test added

--- a/ChatHouse/build.gradle
+++ b/ChatHouse/build.gradle
@@ -15,6 +15,14 @@ buildscript {
     }
 }
 
+tasks.withType(Test) {
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        showStandardStreams true
+    }
+}
+
 allprojects {
     repositories {
         google()
