--- a/ChatHouse/app/build.gradle
+++ b/ChatHouse/app/build.gradle
@@ -28,6 +28,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -38,7 +39,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    compile 'com.llollox:androidtoggleswitch:2.0.1'
+    implementation 'com.llollox:androidtoggleswitch:2.0.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -46,8 +47,7 @@ dependencies {
     implementation 'com.google.android.material:material:<version>'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
-
+//    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
 
 }
