--- a/ChatHouse/.github/workflows/android_build.yml
+++ b/ChatHouse/.github/workflows/android_build.yml
@@ -1,6 +1,13 @@
-name: Android Build
+# This workflow will build a Java project with Gradle
+# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-on: pull_request
+name: Java CI with Gradle
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -8,15 +15,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Set Up JDK
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
-
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Gradle
+        run: ./gradlew build
       - name: Run Tests
         run: ./gradlew tests
-
-      - name: Build Project
-        run: ./gradlew assemble
