--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./ChatHouse/gradlew
     - name: Build with Gradle
       run: ./ChatHouse/gradlew build
     - name: Run Tests
