--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,9 @@ jobs:
         distribution: 'adopt'
     - name: Grant execute permission for gradlew
       run: chmod +x ./ChatHouse/gradlew
+    - name: Change directory
+      run: cd ./ChatHouse
     - name: Run Tests
-      run: ./ChatHouse/gradlew ./ChatHouse/test
+      run: gradlew test
     - name: Build with Gradle
-      run: ./ChatHouse/gradlew build
+      run: gradlew build
