--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,10 +22,11 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Grant execute permission for gradlew
-      run: chmod +x ./ChatHouse/gradlew
-    - name: Change directory
-      run: cd ./ChatHouse
+      run: chmod +x gradlew
+      working-directory: ./ChatHouse
     - name: Run Tests
       run: gradlew test
+      working-directory: ./ChatHouse
     - name: Build with Gradle
       run: gradlew build
+      working-directory: ./ChatHouse
