--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,4 +28,4 @@ jobs:
       run: ./ChatHouse/gradlew build
     - name: Run Tests
       working-directory: ./ChatHouse
-      run: ./ChatHouse/gradlew test
+      run: ./gradlew test
